[package]
name = "mobiletunnel"
version = "0.1.0"
edition = "2021"

[lib]
name = "libmobiletunnel"
path = "src/lib/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = { log = {features=["release_max_level_info"]} }
tokio = { version = "1", features = ["full"] }
tokio-util = { features = ["compat", "codec"] }
simple_logger = {}
bytes = {}
futures = {}
tokio-stream = {}
rand = {}